--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0",
+    "express": "^5.2.1",
+    "firebase": "^12.6.0",
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
     "pdf-parse": "^2.4.5",
